--- a/Пр 1 по ПиТ Сидаков Амир и Сидаков Али 422/MainWindow.xaml
+++ b/Пр 1 по ПиТ Сидаков Амир и Сидаков Али 422/MainWindow.xaml
@@ -6,18 +6,28 @@
         xmlns:local="clr-namespace:Пр_1_по_ПиТ_Сидаков_Амир_и_Сидаков_Али_422"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Image Margin="10,10,366,317" Source="/Image1.png" Stretch="Fill"/>
-        <Label Content="x" HorizontalAlignment="Left" Margin="10,160,0,0" VerticalAlignment="Top" Height="34" Width="24"/>
-        <Label Content="q" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="34" Width="32"/>
-        <TextBox HorizontalAlignment="Left" Margin="46,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="186" Height="24"/>
-        <TextBox HorizontalAlignment="Left" Margin="49,211,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="187" Height="23"/>
-        <RadioButton Content="sh(x)" HorizontalAlignment="Left" Margin="26,256,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked" Height="19" Width="67"/>
-        <RadioButton Content="x^2" HorizontalAlignment="Left" Margin="26,282,0,0" VerticalAlignment="Top" Height="19" Width="61"/>
-        <RadioButton Content="e^x" HorizontalAlignment="Left" Margin="26,308,0,0" VerticalAlignment="Top" Height="19" Width="60"/>
-        <Label Content="Ответ" HorizontalAlignment="Left" Margin="16,335,0,0" VerticalAlignment="Top" Height="34" Width="65"/>
-        <TextBox HorizontalAlignment="Left" Margin="89,340,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="187" Height="24"/>
-        <Button Content="Вычислить" HorizontalAlignment="Left" Margin="236,256,0,0" VerticalAlignment="Top" Height="26" Width="97"/>
-        <Button Content="Очистить" HorizontalAlignment="Left" Margin="236,292,0,0" VerticalAlignment="Top" Click="Button_Click" Height="26" Width="85"/>
+    <Grid Margin="10">
+        <!-- Формула -->
+        <Image Source="/Image1.png" Height="80" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
+        <!-- Метки и поля ввода -->
+        <Label Content="x" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="TextBoxX" HorizontalAlignment="Left" Margin="50,100,0,0" VerticalAlignment="Top" Width="80"/>
+
+        <Label Content="q" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="TextBoxQ" HorizontalAlignment="Left" Margin="50,140,0,0" VerticalAlignment="Top" Width="80"/>
+
+        <!-- Радиокнопки выбора функции -->
+        <RadioButton Name="RadioShX" Content="sh(x)" HorizontalAlignment="Left" Margin="10,180,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="RadioX2" Content="x²" HorizontalAlignment="Left" Margin="10,210,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="RadioExpX" Content="e^x" HorizontalAlignment="Left" Margin="10,240,0,0" VerticalAlignment="Top"/>
+
+        <!-- Кнопки -->
+        <Button Content="Вычислить" HorizontalAlignment="Left" Margin="150,180,0,0" VerticalAlignment="Top" Width="100" Click="CalculateButton_Click"/>
+        <Button Content="Очистить" HorizontalAlignment="Left" Margin="150,220,0,0" VerticalAlignment="Top" Width="100" Click="ClearButton_Click"/>
+
+        <!-- Ответ -->
+        <Label Content="Ответ" HorizontalAlignment="Left" Margin="10,280,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="ResultTextBox" HorizontalAlignment="Left" Margin="60,280,0,0" VerticalAlignment="Top" Width="100" IsReadOnly="True"/>
     </Grid>
 </Window>
